loyalty-system/loyalty-system-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loyalty-system-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loyalty-system-app
  template:
    metadata:
      labels:
        app: loyalty-system-app
    spec:
      containers:
        - name: loyalty-system
          image: tramak/loyalty-system:latest
          ports:
            - name: loyalty-system
              containerPort: 8080
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 30
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 30
          volumeMounts:
            - name: shop-service-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
      - name: shop-service-persistent-storage
        persistentVolumeClaim:
          claimName: shop-service-pv-claim
