loyalty-system/loyalty-system-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loyalty-system-service
spec:
  selector:
    app: loyalty-system-app
  type: NodePort  
  ports:
    - port: 8080
      targetPort: 8080
